<resources>
    <string name="app_name">LoginSignUp</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="proceed">Proceed</string>
    <string name="new_user_registration_sign_up">New User Registration Sign Up</string>
    <string name="if_you_are_already_registered_login_in">If you are already Registered, Login in.</string>
</resources>